--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>GEOG 370 HW</title>
 </head>
 <body>
-    <h1>Distance between Airport and High School</h1>
-
+    <a href="./HW2/map2.html">Homework 2: Distance Map</a> </br>
 </body>
 </html>
