--- a/map2.html
+++ b/map2.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Distance Map</title>
+    <title>GEOG 370 HW</title>
 </head>
 <body>
     <h2>The distance from the airport to my high school </h2>
     
-    <h4>This map visualizes the distance I went after school once a month to fly to go visit my dad.</h4>
-    <a href="./Images/HW2-Sturisky.png">
-    <img src="./Images/HW2-Sturisky.png" alt="High School to Airport in Charlotte, NC" width='750px'>
+    <a href="./images/HW2-Sturisky.png">
+    <img src="./images/HW2-Sturisky.png" alt="High School to Airport in Charlotte, NC" width='500px'>
 
     </a>
     <h4>Data used for this project is from:</h4><a href="http://maps.co.mecklenburg.nc.us/openmapping/data.html"> DataLB </a>
