--- a/map2.html
+++ b/map2.html
@@ -9,14 +9,14 @@
 <body>
     <h2>The distance from the airport to my high school </h2>
     
-    <a href="./images/HW2-Sturisky.png">
-    <img src="./images/HW2-Sturisky.png" alt="High School to Airport in Charlotte, NC" width='500px'>
+    <a href="./HW2/images/HW2-Sturisky.png">
+    <img src="./HW2/images/HW2-Sturisky.png" alt="High School to Airport in Charlotte, NC" width='500px'>
 
     </a>
-    <h4>Data used for this project is from:</h4><a href="http://maps.co.mecklenburg.nc.us/openmapping/data.html"> DataLB </a>
+    <h4>Data used for this project is from:</h4><a href="http://maps.co.mecklenburg.nc.us/openmapping/data.html"> MeckNC </a>
     <h4>Vector Files</h4>
     <a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW2/Data/AirToSchool_line.geojson">Point Layer: Charlotte Airport</a><p></p>
-    <a href="https://github.com/adriennehall8/GISUNC/blob/main/HW2/Data/schoolCharlotte.geojson">Polygon Layer: Providence Day School</a><p></p>
+    <a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW2/Data/schoolCharlotte.geojson">Polygon Layer: Providence Day School</a><p></p>
     <a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW2/Data/AirToSchool_line.geojson">Line Layer: Distance</a><p></p>
 </body>
 </html>
