--- a/HW2/map2.html
+++ b/HW2/map2.html
@@ -9,8 +9,8 @@
 <body>
     <h2>The distance from the airport to my high school </h2>
     
-    <a href="./HW2/images/HW2-Sturisky.png">
-    <img src="./HW2/images/HW2-Sturisky.png" alt="High School to Airport in Charlotte, NC" width='500px'>
+    <a href="./images/HW2-Sturisky.png">
+    <img src="./images/HW2-Sturisky.png" alt="High School to Airport in Charlotte, NC" width='500px'>
 
     </a>
     <h4>Data used for this project is from:</h4><a href="http://maps.co.mecklenburg.nc.us/openmapping/data.html"> MeckNC </a>
