--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="./HW2/map2.html">Homework 2: Distance Map</a> </br>
     <a href="./HW4/tilesHW4.html"> Homework 4: Tile Map</a>
     <a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW4/unrect_unc_topo_1993_modified.tif.points"> Control Points</a>
-    <!-- <a href="./04Homework/EXAMPLEHW4.png"> Map PNG</a> -->
+    <a href="./HW4/GeoreferencedUNC.png"> Map PNG</a>
  </br>
 </body>
 </html>
