--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW4/unrect_unc_topo_1993_modified.tif.points"> Control Points</a>
     <a href="./HW4/GeoreferencedUNC.png"> Map PNG</a></br>
     <a href="./HW5/tiles_HW5.html">Homework 5: Tile Map</a>
+    <a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW5/gcp_downtown_atl.points"> Control Points</a></br>
 <body>
 </html>
