--- a/HW5/tiles_HW5.html
+++ b/HW5/tiles_HW5.html
@@ -27,7 +27,7 @@
   <div id="map"></div>
   <script>
       var map = L.map('map').setView([33.774734804185826, -84.37179105724563], 14.0);
-      L.tileLayer('./tiles_HW5/{z}/{x}/{y}.jpg', {
+      L.tileLayer('./tiles_HW5/{z}/{x}/{y}.png', {
         minZoom: 12,
         maxZoom: 16,
         tms: false,
