--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <a href="./HW4/GeoreferencedUNC.png"> Map PNG</a></br>
     <a href="./HW5/tiles_HW5.html">Homework 5: Tile Map</a>
     <a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW5/gcp_downtown_atl.points"> Control Points</a></br>
+    <a href="./HW6/NCcounty.html">Homework 6 (part 1): Choropleth of NC Residents with Graduate Degree</a>
 <body>
 </html>
