--- a/HW6/NCcounty.html
+++ b/HW6/NCcounty.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework 6: Census data choropleth</title>
+    <title>GEOG 370 HW</title>
 </head>
 <body>
+    <h2>Homework 6: Census data choropleth</h2>
+
     <a href="./images/HW6-Sturisky.png"
-    <img src="./images/HW6-Sturisky.png" alt="NC Counties by Highest Education" width='500px'>
+    img src="./images/HW6-Sturisky.png" alt="NC County by Number of Residents with Graduate Degree" width='500px'>
+
 </a>
 <h4>The map above is analyzing census data of every North Carolina county. The map compares county data of number of residents with a graduate or professional degree. As seen on the map due to having the darkest shade of purple, Wake County has the most residents with a graduate or professional degree. On the other end, the countries that are white on the map have the least residents with a graduate degree. </h4>
 </body>
