--- a/HW6/NCcounty.html
+++ b/HW6/NCcounty.html
@@ -9,10 +9,12 @@
 <body>
     <h2>Homework 6: Census data choropleth</h2>
 
-    <a href="./images/HW6-Sturisky.png"
-    img src="./images/HW6-Sturisky.png" alt="NC County by Number of Residents with Graduate Degree" width='500px'>
+    <a href="./images/HW6-Sturisky.png">
+    <img src="./images/HW6-Sturisky.png" alt="NC County by Number of Residents with Graduate Degree" width='500px'>
 
 </a>
 <h4>The map above is analyzing census data of every North Carolina county. The map compares county data of number of residents with a graduate or professional degree. As seen on the map due to having the darkest shade of purple, Wake County has the most residents with a graduate or professional degree. On the other end, the countries that are white on the map have the least residents with a graduate degree. </h4>
+
+
 </body>
 </html>
