--- a/HW6/NCcounty.html
+++ b/HW6/NCcounty.html
@@ -15,6 +15,8 @@
 </a>
 <h4>The map above is analyzing census data of every North Carolina county. The map compares county data of number of residents with a graduate or professional degree. As seen on the map due to having the darkest shade of purple, Wake County has the most residents with a graduate or professional degree. On the other end, the countries that are white on the map have the least residents with a graduate degree. </h4>
 
-
+<h2>Data used for this project:</h2>
+<a href=""> Link to geoJSON on Github</a>
+<a href=""> Link to cleaned csv dataset on Github</a>
 </body>
 </html>
