--- a/HW6/NCcounty.html
+++ b/HW6/NCcounty.html
@@ -13,11 +13,11 @@
     <img src="./images/HW6-Sturisky.png" alt="NC County by Number of Residents with Graduate Degree" width='500px'>
 
 </a>
-<h4>The map above is analyzing census data of every North Carolina county. The map compares county data of number of residents with a graduate or professional degree. As seen on the map due to having the darkest shade of purple, Wake County has the most residents with a graduate or professional degree. On the other end, the countries that are white on the map have the least residents with a graduate degree. </h4>
+<h4>The map above is analyzing census data related to education of every North Carolina county. The map compares county data of number of residents with a graduate or professional degree. As seen on the map due to having the darkest shade of purple, Wake County has the most residents with a graduate or professional degree. On the other end, the countries that are white on the map have the smallest numbers of residents with a graduate degree. I used EPSG: 2264 which is NAD83 / North Carolina (ftUS). </h4>
 
 <h2>Data used for this project:</h2>
-<a href=""> Link to geoJSON on Github</a>
+<a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW6/data/nc_counties.geojson"> Link to geoJSON on Github</a>
 <p></p>
-<a href=""> Link to cleaned csv dataset on Github</a>
+<a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW6/data/NC_Education_Cleaned.csv"> Link to cleaned csv dataset on Github</a>
 </body>
 </html>
