--- a/HW6-2/ratio_modes.html
+++ b/HW6-2/ratio_modes.html
@@ -15,7 +15,7 @@
     <img src="./images/natural_breaks.png" alt="Natural Breaks Mode" width='500px'>
 
     </a>
-    <h4>Natural breaks is a classification that strives to minimize the variation of data within each class. This means that other classifications will have classes that fit data with larger deviations from one other. A con is that the outlier data has a noticable huge range in variation within its class, which contradicts the ideas behind this classification. </h4>
+    <h4>Natural breaks is a classification that strives to minimize the variation of data within each class so two pieces of data can not be in the same class if there numbers are not close together. This means that other classifications will have classes that fit data with larger deviations from one other. A con is that the outlier data has a noticable huge range in variation within its class, which contradicts the ideas behind this classification. </h4>
 
     <a href="./images/equal_count.png">
     <img src="./images/equal_count.png" alt="Equal Count Mode" width='500px'>
@@ -27,11 +27,11 @@
     <img src="./images/pretty_break.png" alt="Pretty Breaks Mode" width='500px'>
 
     </a>
-    <h4>The pretty breaks classification will round break points to whole numbers.</h4>
+    <h4>The pretty breaks classification will round break points to whole numbers. This makes the table look a lot cleaner and easier to follow. However, breakeven points will lose their value because it will be prearranged where they are to fit the classification.</h4>
 
     <h2>Data used for this project:</h2>
     <a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW6/data/nc_counties.geojson"> Link to geoJSON on Github</a>
     <p></p>
-    <a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW6/data/NC_Education_Cleaned.csv"> Link to cleaned csv dataset on Github</a>
+    <a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW6-2/data/education_with_total.csv"> Link to cleaned csv dataset on Github</a>
 </body>
 </html>
