--- a/HW6-2/ratio_modes.html
+++ b/HW6-2/ratio_modes.html
@@ -9,7 +9,7 @@
 <body>
     <h2>Homework 6, Part 2: 3 Different Modes for Data Categorization</h2>
 
-    <h4>I took from the census the total number of people in each county along with the number of people in each county with graduate or professional degrees. Dividing the number of people with grad degrees by the total, gave me a ratio that I could then multiply by 100,000 for data purposes. I was interested in calculating this ratio because I expected it to be common in highly populated counties such as Wake and Mecklenburg for more residents to have graduate degrees, but I wanted to see if there was a deviation as a result of giving smaller counties more emphasis through these ratios. </h4>
+    <h4>I took from the census the total number of people in each county along with the number of people in each county with graduate or professional degrees. Dividing the number of people with grad degrees by the total, gave me a ratio that I could then multiply by 100,000 for data purposes. I was interested in calculating this ratio because I expected it to be common in highly populated counties such as Wake and Mecklenburg for more residents to have graduate degrees, but I wanted to see if there was a deviation as a result of giving smaller counties more emphasis through these ratios. I utilized Natural Breaks, Equal Count, and Pretty Breaks as my three classifications to witness how the choropleth changes by county. </h4>
 
     <a href="./images/natural_breaks.png">
     <img src="./images/natural_breaks.png" alt="Natural Breaks Mode" width='500px'>
