--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW5/gcp_downtown_atl.points"> Control Points</a></br>
     <a href="./HW6/NCcounty.html">Homework 6 (part 1): Choropleth of NC Residents with Graduate Degree</a></br>
     <a href="./HW6-2/ratio_modes.html">Homework 6 (part 2): 3 Different Modes for Data Classification</a></br>
+    <a href="./HW7/canada_airports.html">Homework 7: Canada Airports Map</a></br>
 <body>
 </html>
