--- a/HW7/canada_airports.html
+++ b/HW7/canada_airports.html
@@ -24,5 +24,6 @@
 <h4>COVID-19 dramatically caused a reduction of flights in 2020, and it is extremely apparent just by looking at the table and seeing the range of passenger numbers. Notably, Winnipeg moved out of the smallest class with Halifax into the second to smallest class. The 300,000 difference in passengers between the two airports is the highest it has been in recent years. Even more interestingly was that it took a pandemic for Calgary to pass Montreal for third busiest airport in Canada. </h4>
 
 <h2>Data used for this project:</h2>
+<a href="https://github.com/marcstur1/GEOG370_sturisky/blob/main/HW7/data/Major_Canadian_Airports.csv"> Link to cleaned csv dataset on Github</a>
 </body>
 </html>
