--- a/HW7/canada_airports.html
+++ b/HW7/canada_airports.html
@@ -9,13 +9,13 @@
 <body>
     <h2>Homework 7</h2>
 
-    <h4>The data depicted below are maps featuring Canada's 8 busiest airports (which were the same in 2019 and 2020). It is most notable to look at the table because there are just a huge drop in passengers from pre-covid to the covid era. I became interested in the airline industry at a young age and so I looked for a way to tie that in to this project. I split up Eastern and Western Canada to make it easier to see my labels because there is such a huge distance between Vancouver and Halifax.</h4>
+    <h4>The data depicted below are maps featuring Canada's 8 busiest airports (which were the same in 2019 and 2020). It is most notable to look at the table because there is just a huge drop in passengers from pre-covid to the covid era. I became interested in the airline industry at a young age and so I looked for a way to tie that in to this project. I'm working for an airline this summer and hope to make it my long-term career. I split up Eastern and Western Canada to make it easier to see my labels because there is such a huge distance between Vancouver and Halifax.</h4>
 
     <a href="./maps/2019_canadaairports.png">
     <img src="./maps/2019_canadaairports.png" alt="2019 Number of Passengers in Canadian Airports" width=500x>
     
 </a>
-<h4>Airports had high levels of passengers in these pre-covid times. Toronto and Vancouver had the most passengers with Halifax and Winnipeg having the least. Natural breaks was used for the table.  </h4>
+<h4>Airports had high levels of passengers in these pre-covid times. Toronto and Vancouver had the most passengers with Halifax and Winnipeg having the least. Natural breaks was used for the table. Size and color both represent airports having more passengers (by points being darker in shade and larger)  </h4>
 
 <a href="./maps/2020_canadianAirports.png">
 <img src="./maps/2020_canadianAirports.png" alt="2020 Number of Passengers in Canadian Airports" width=500x>
