--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <a href="./HW6/NCcounty.html">Homework 6 (part 1): Choropleth of NC Residents with Graduate Degree</a></br>
     <a href="./HW6-2/ratio_modes.html">Homework 6 (part 2): 3 Different Modes for Data Classification</a></br>
     <a href="./HW7/canada_airports.html">Homework 7: Canada Airports Map</a></br>
+    <a href="HW8/votes_train_atl.html">Homework 8: Geoprocessing Analysis of Atlanta</a></br>
 <body>
 </html>
